cmake_minimum_required(VERSION 3.29)
project(untitled7)

set(CMAKE_CXX_STANDARD 20)

add_executable(untitled7 main.cpp
        APPLE.cpp
        APPLE.h
        TimCook.cpp
        TimCook.h
        iPhone.cpp
        iPhone.h
        AirPods.cpp
        AirPods.h
        AppleWatch.cpp
        AppleWatch.h
        MacBook.cpp
        MacBook.h
        iPad.cpp
        iPad.h)
